--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--comments go here -->
+<!-- this 
+    is
+    a
+    multi-lines
+    comments
+    -->    
+
+    <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>San Joaquin Valley Town Hall</title>
@@ -11,5 +19,7 @@
         this season!</p>
     <p><a href="speakers.html">Speaker
         information</a></p>
+        <div></div> class="content"> <p>This is some content for the website. <!-- Missing closing </div> tag here -->
+
     </body>
 </html>
