--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <!--comments go here -->
 <!-- this 
-    is
-    a
-    multi-lines
-    comments
-    -->    
+      is
+     a
+      multi-lines
+       comments
+-->    
 
-    <html lang="en">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>San Joaquin Valley Town Hall</title>
-</head>
-<body>
-    <h1>San Joaquin Valley Town Hall</h1>
-    <p>Welcome to San Joaquin Valley Town Hall</p>
-    <p>We have some amazing speakers in store for you
-        this season!</p>
-    <p><a href="speakers.html">Speaker
-        information</a></p>
-        <div></div> class="content"> <p>This is some content for the website. <!-- Missing closing </div> tag here -->
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>
+        <h1>San Joaquin Valley Town Hall</h1>
+        <p>Welcome to San Joaquin Valley Town Hall</p>
+        <p>We have some amazing speakers in store for you
+            this season!</p>
+        <p><a href="speakers.html">Speaker
+                information</a></p>
 
+        <div> class="content"> <p>This is some content for the website. </p></div>
     </body>
 </html>
